 /* $Id: ChangeLog,v 1.842 2000-03-27 21:42:58 sandervl Exp $ */

 2000-03-27: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32:   Fixed SetParent; remove child from parent's list (previously
                    didn't happen for children of the desktop)

 2000-03-27: Christoph Bratschi <cbratschi@datacomm.ch>
	- SHELL32: only scan dir once in CreateFolderEnumList
		   floppy drives have a fixed name

 2000-03-26: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMDLG32:
	- SHELL32:  merged with Corel WINE 20000324

 2000-03-25: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Fixes for GetStdHandle
	- WSOCK32:  Fixes for getservbyname & getservbyport

 2000-03-24: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Fixed typo in pe loader (check for < 512 MB)
	- USER32:   Add size of space between two menu items when calculating
                    size of ownerdrawn menu item (fixes RealPlayer 7 menu)
	- GDI32:    Default format of 16 bits dibsection is RGB555
                    (fixes wrong colors when (sometimes) playing flash files
                     in RealPlayer 7)
	- WSOCK32\NEW: Bugfixes
        - WSOCK32:  Replaced with new wsock32

 2000-03-24: Achim Hasenmueller <achimha@innotek.de>
	- WSOCK32\NEW: Made it compile with the TCP/IP V5
	               header files.
                       NOTE: should we rely on the 32bit
	                     stack, is there any benefit for us?
	- DPLAY: Added ordinals 2 and 3 to the def file, APIs
	         already seem to be implemented?!?
	- COMDLG32: Fixed correct (Win95/OS2) dialog invocation

 2000-03-24: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: fixed GetClipboardFormatNameW
		  fixed scrollbar memory leak
	- SHELL32: fixed IDataObject_fnGetData return value (file dialog
		   is now usable)

 2000-03-23: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Fixed shared global mutex
                    Added VSemaphore class
	- USER32:   Fixed shared global mutex
          TODO: